# splurge-sql-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  types.yaml
.github/workflows/: ci-lint-and-typecheck.yml
docs/: 2025-08-24-simplification.md  IMPLEMENTATION_SUMMARY.md  README-DETAILS.md  issues-u2p-2025-sep-12-e.md  issues-u2p-2025-sep-12-f.md  issues-u2p-2025-sep-13-a.md
docs/api/: API-REFERENCE.md
docs/cli/: CLI-REFERENCE.md
docs/plans/: plan-2025.5.0-phase-1-3-implementation.md  plan-simplification-implementation-2025-10-31.md
docs/research/: research-2025.5.0-simplification.md  research-design-review.md
examples/: CustomExample.schema  CustomExample.sql  MSSQLExample.schema  MSSQLExample.sql  OracleExample.schema  OracleExample.sql  OrderService.schema  OrderService.sql  ProductRepository.sql  ProductRepository.sql.schema  README.md  User.sql  User.sql.schema  api_simple_example.py  api_usage_example.py  cli_usage_example.py  custom_types.yaml  logger_comparison.py  simple_example.py  usage_example.py
examples/more/: city.py  city.sql  county.py  county.sql  database.schema  state.py  state.sql
jpy_sql_generator/: __init__.py  cli.py  code_generator.py  sql_helper.py  sql_parser.py
jpy_sql_generator/templates/: python_class.j2
plans/: 2025-08-24-schema-parser-simplification.md
splurge_sql_generator/: __init__.py  __main__.py  cli.py  code_generator.py  config.py  errors.py  exceptions.py  file_utils.py  schema_parser.py  sql_helper.py  sql_parser.py  type_definitions.py  type_inference.py  utils.py
tests/: example_statement_detection.py  test_cli.py  test_cli_integration.py  test_cli_sql_type_option.py  test_code_generator.py  test_detect_statement_type.py  test_end_to_end_workflow.py  test_functional_code_generation.py  test_generate_types.py  test_generated_code_behavior.py  test_generated_code_error_handling.py  test_generated_code_importability.py  test_init_api.py  test_parameter_validation.py  test_parse_sql_statements.py  test_remove_sql_comments.py  test_schema_parser.py  test_sql_helper.py  test_sql_parser.py  test_statement_detection.py  test_template_rendering.py  test_utils.py
tests/integration/: test_cli.py  (+4 more)
(+44 files in other folders)
