[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpy-sql-generator"
version = "0.1.0"
description = "Jim's Python SQL generator"
authors = [
    {name = "Jim Schilling", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sqlalchemy>=2.0.39",
]

[project.scripts]
jpy-sql-gen = "jpy_sql_generator.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/jpy_sql_generator"
Repository = "https://github.com/yourusername/jpy_sql_generator"
Issues = "https://github.com/yourusername/jpy_sql_generator/issues"

[tool.setuptools.packages.find]
include = ["jpy_sql_generator*"]
exclude = ["tests*", "examples*", "output*"]
